--- a/scss/_project_page.scss
+++ b/scss/_project_page.scss
@@ -105,18 +105,13 @@
 		margin: auto;
 		cursor: pointer;
 
-		// transition: height 0.25s ease-in-out, width 1s ease-in-out;
-
-		&.mobile-selected {
-			// outline: 2px solid var(--teal200);
-			// width: 95%;
-			// height: 95%;
-			// box-shadow: 0 0 2rem -0.5rem var(--black);
-			// transition: height 0.25s ease-in-out, width 1s ease-in-out;
-		}
-
 		&.current {
 			outline: 2px solid var(--teal100);
+		}
+
+		&.todays_task {
+			outline: 2px solid var(--teal400);
+			outline-offset: 2px;
 		}
 
 		& div.wrapper {
