--- a/scss/_project_page.scss
+++ b/scss/_project_page.scss
@@ -13,20 +13,16 @@
 	row-gap: 1.6rem;
 	column-gap: 1.6rem;
 
-	& > input {
-		grid-row: 2;
-		justify-self: center;
-		grid-column: 1/3;
-		justify-self: center;
-		border: none;
-		background: var(--secondary);
-		color: var(--primary);
-		text-align: center;
-		padding: 0.8rem;
-		font-size: 2.4rem;
-		border: 1px solid var(--primary);
-		border-radius: 0.4rem;
+	& .project__name {
+		display: flex;
 		max-width: max-content;
+		justify-self: center;
+		column-gap: 1.6rem;
+		align-items: center;
+
+		& h1 {
+			font-weight: 400;
+		}
 	}
 
 	& .dashboard-link {
