--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -11,7 +11,7 @@
 		grid-template-rows: auto max-content;
 		row-gap: 0.8rem;
 		padding: 1.6rem;
-		height: calc(100vh - 6.4rem);
+		height: calc(100vh - 12.8rem);
 		width: calc(100vw - 6.4rem);
 		overflow-y: auto;
 		background: var(--secondary);
@@ -48,8 +48,9 @@
 	}
 
 	@media (min-width: $medium) {
-		& div.wrapper {
+		& div.wrapper:not(.note):not(.statuses) {
 			width: unset;
+			min-width: 80rem;
 		}
 	}
 }
