--- a/scss/_project_page.scss
+++ b/scss/_project_page.scss
@@ -2,6 +2,7 @@
 	display: grid;
 	min-height: 100vh; // important to be able to drop tiles
 	grid-template-rows: max-content max-content auto;
+	row-gap: 1.6rem;
 }
 
 .title__wrapper {
@@ -85,7 +86,7 @@
 .task__column {
 	display: grid;
 	row-gap: 1.6rem;
-	height: 100%;
+	// height: 100%;
 	align-content: flex-start;
 
 	& .task__tile {
@@ -93,8 +94,12 @@
 		position: relative;
 		align-items: center;
 		column-gap: 1.6rem;
-		background: var(--secondary);
-		border: 1px solid var(--primary);
+		// background: var(--secondary);
+		background: white;
+		// border: 1px solid var(--primary);
+		border: none;
+
+		box-shadow: var(--elevation-3);
 		border-radius: 0.4rem;
 		height: 100%;
 		width: 100%;
@@ -114,7 +119,7 @@
 			position: relative;
 			overflow: hidden;
 			display: grid;
-			padding: 0.8rem;
+			padding: 1.6rem;
 			row-gap: 0.4rem;
 			border-radius: 0.3rem;
 		}
@@ -195,11 +200,15 @@
 			display: grid;
 			grid-template-columns: auto max-content;
 			column-gap: 0.8rem;
-			align-items: flex-end;
+			background: white;
+			padding: 1.6rem;
+			border-radius: 0.4rem;
+			box-shadow: var(--elevation-2);
+			align-items: center;
+			cursor: pointer;
 		}
 
 		& .icon {
-			cursor: pointer;
 		}
 	}
 }
