--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,18 +30,26 @@ body {
 
 h1 {
 	font-size: 3.2rem;
+	font-weight: 600;
 }
 
 h2 {
 	font-size: 2.8rem;
+	font-weight: 600;
 }
 
 h3 {
 	font-size: 2.4rem;
+	font-weight: 600;
 }
 
 h4 {
 	font-size: 2rem;
+	font-weight: 600;
+}
+
+h5 {
+	font-weight: 600;
 }
 
 ul {
