--- a/scss/_project_page.scss
+++ b/scss/_project_page.scss
@@ -141,7 +141,7 @@
 				content: "";
 				height: 100%;
 				width: 100%;
-				background: linear-gradient(transparent 60%, var(--secondary));
+				background: linear-gradient(transparent 60%, white);
 				top: 0;
 				left: 0;
 			}
