fix: issue with category menu staying open when openin others, and buttons not being styled

--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,7 @@ button {
 button.special {
   background: var(--primary);
   color: var(--secondary);
+  border: 1px solid var(--secondary);
 }
 
 button.special:focus-visible {
