very much not complete rich text editor, continual wip

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -12,6 +12,7 @@ form:not(.todays-tasks) {
 	.description {
 		display: grid;
 		grid-template-rows: max-content auto;
+		row-gap: 0.8rem;
 		height: 100%;
 	}
 
