--- a/scss/_rich-text-editor.scss
+++ b/scss/_rich-text-editor.scss
@@ -1,11 +1,14 @@
 rich-text-editor {
 	display: grid;
 	grid-template-rows: max-content auto;
+	height: 100%;
 	row-gap: 1.6rem;
 
 	& .toolbar {
 		display: flex;
+		flex-wrap: wrap;
 		column-gap: 1.6rem;
+		row-gap: 0.8rem;
 		& .icon {
 			width: 2rem;
 			height: 2rem;
