--- a/calendar-view/_calendar.scss
+++ b/calendar-view/_calendar.scss
@@ -60,7 +60,7 @@
 			column-gap: 0.4rem;
 			row-gap: 0.4rem;
 			text-align: left;
-			padding: 0.4rem;
+			padding: 0.2rem 0.4rem;
 			grid-auto-rows: max-content;
 
 			& span.task {
