--- a/css/main.css
+++ b/css/main.css
@@ -1070,7 +1070,7 @@ create-link-popup .link-popup__wrapper button.icon-only {
        column-gap: 0.4rem;
   row-gap: 0.4rem;
   text-align: left;
-  padding: 0.4rem;
+  padding: 0.2rem 0.4rem;
   grid-auto-rows: -webkit-max-content;
   grid-auto-rows: max-content;
 }
