fix: unsetting category in session on update, shouldnt happen

--- a/css/main.css
+++ b/css/main.css
@@ -506,6 +506,7 @@ tile-context-menu input {
   flex: 1;
   box-shadow: var(--elevation-3);
   background: white;
+  max-width: 30rem;
   cursor: pointer;
 }
 .project_tile--content {
