made completed tasks in calendar less opaque

--- a/calendar-view/_calendar.scss
+++ b/calendar-view/_calendar.scss
@@ -70,6 +70,9 @@
 				border-radius: 0.8rem;
 				cursor: pointer;
 
+				&.completed {
+					opacity: 0.3;
+				}
 				&:hover {
 					background: #a9d3cd;
 				}
