update to icons tobe inline-block

--- a/css/main.css
+++ b/css/main.css
@@ -782,6 +782,7 @@ tile-context-menu input {
 }
 
 .icon {
+  display: inline-block;
   -webkit-mask-repeat: no-repeat;
           mask-repeat: no-repeat;
   -webkit-mask-position: center;
