--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -49,7 +49,7 @@ form:not(.login, .register) button {
 	padding: 0;
 }
 
-button {
+.btn {
 	padding: 1.6rem;
 	background: var(--secondary);
 	color: var(--primary);
@@ -82,7 +82,8 @@ button.delete {
 	color: var(--white);
 }
 
-button.icon-only {
+.icon-only {
+	display: flex;
 	padding: 0.8rem;
 	border-radius: 50%;
 	background: transparent;
