--- a/scss/_project_page.scss
+++ b/scss/_project_page.scss
@@ -230,6 +230,7 @@ form.note-form {
 .category-sort__wrapper {
 	display: flex;
 	justify-content: space-between;
+	margin: 0 1.6rem;
 }
 
 tile-context-menu {
