--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -58,7 +58,7 @@ form:not(.login, .register) button {
 	cursor: pointer;
 }
 
-button.special {
+.special {
 	background: var(--primary);
 	color: var(--secondary);
 	border: 1px solid var(--secondary);
@@ -69,7 +69,7 @@ button.special {
 	}
 }
 
-button.delete-link {
+.delete-link {
 	color: var(--orange300);
 	width: max-content;
 	justify-self: flex-end;
@@ -77,7 +77,7 @@ button.delete-link {
 	padding: 0;
 }
 
-button.delete {
+.delete {
 	background: var(--orange300);
 	color: var(--white);
 }
