--- a/scss/_project_page.scss
+++ b/scss/_project_page.scss
@@ -39,21 +39,35 @@
 }
 
 .tasks__wrapper {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	display: flex;
+	flex-direction: column;
+	grid-auto-rows: max-content;
 	padding: 0 1.6rem;
 	column-gap: 0.8rem;
+	row-gap: 1.6rem;
 	margin-bottom: 3.2rem;
 
-	@media (max-width: 500px) {
-		display: flex;
-		flex-direction: column;
+	@media (min-width: $small) {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	@media (min-width: $medium) {
+		grid-template-columns: repeat(4, 1fr);
 	}
 }
 
-.task__column--wrapper {
-	& h3 {
-		display: flex;
+.task__column {
+	height: 0;
+	display: grid;
+	row-gap: 1.6rem;
+	align-content: flex-start;
+	overflow: hidden;
+
+	&--title {
+		display: grid;
+		position: relative;
+		grid-auto-flow: column;
 		column-gap: 0.8rem;
 		justify-content: center;
 		align-items: center;
@@ -63,43 +77,60 @@
 		font-size: 1.8rem;
 		font-weight: 400;
 		padding: 0.8rem 0;
+		cursor: pointer;
 
-		& span {
-			display: grid;
-			place-content: center;
-			width: 2.4rem;
-			height: 2.4rem;
+		&:hover {
+			background: var(--primary);
+			color: var(--secondary);
 
-			& i {
-				padding: 0.4rem;
+			& .icon {
+				background-color: var(--secondary);
+			}
+
+			.task__column--count {
+				background: var(--secondary);
+				color: var(--primary);
 			}
 		}
-
-		& i:hover {
-			color: var(--secondary);
-			background: var(--primary);
-			border-radius: 50%;
-			cursor: pointer;
-		}
 	}
-}
 
-.task__column {
-	display: grid;
-	row-gap: 1.6rem;
-	// height: 100%;
-	align-content: flex-start;
+	&--count {
+		position: absolute;
+		justify-self: flex-end;
+		right: 0.8rem;
+		height: 1.5em;
+		width: 1.5em;
+		border-radius: 50%;
+		background: var(--primary);
+		color: var(--secondary);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		line-height: 1;
+	}
+
+	&--wrapper {
+		display: grid;
+		grid-auto-rows: max-content;
+		border: 1px solid var(--grey100);
+		padding: 1.6rem;
+		border-radius: 0.8rem;
+		height: max-content;
+	}
+
+	&.open {
+		height: 100%;
+		overflow: unset;
+		margin-top: 1.6rem;
+	}
 
 	& .task__tile {
 		display: grid;
 		position: relative;
 		align-items: center;
 		column-gap: 1.6rem;
-		// background: var(--secondary);
 		background: white;
-		// border: 1px solid var(--primary);
 		border: none;
-
 		box-shadow: var(--elevation-3);
 		border-radius: 0.4rem;
 		height: 100%;
@@ -161,6 +192,16 @@
 		width: 4rem;
 		height: 4rem;
 		transform: rotate(45deg);
+	}
+
+	@media (min-width: $medium) {
+		height: auto;
+		overflow: unset;
+
+		&--title {
+			cursor: initial;
+			pointer-events: none;
+		}
 	}
 }
 
