--- a/calendar-view/_calendar.scss
+++ b/calendar-view/_calendar.scss
@@ -25,26 +25,36 @@
 		border-radius: 0.4rem;
 
 		& a {
+			display: flex;
+			align-items: center;
+			column-gap: 0.8rem;
 			color: var(--white);
+
+			& .icon {
+				background-color: var(--white);
+			}
 		}
 	}
 
 	.box-content {
+		position: relative;
 		display: grid;
-		grid-template-rows: max-content auto;
+		grid-template-columns: max-content auto;
 		row-gap: 0.8rem;
 	}
 
 	ul {
 		display: grid;
-		grid-template-columns: repeat(7, 1fr);
 		grid-auto-rows: 1fr;
+		padding: 0;
 	}
 
-	ul.dates {
-		display: flex;
-		flex-wrap: wrap;
-		height: 100%;
+	.label {
+		.title {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
 	}
 
 	li {
@@ -56,8 +66,10 @@
 	}
 
 	.dates {
+		grid-template-rows: repeat(7, 1fr);
+
 		li {
-			display: grid;
+			display: none;
 			grid-template-columns: max-content auto;
 			column-gap: 0.4rem;
 			row-gap: 0.4rem;
@@ -65,6 +77,10 @@
 			padding: 0.2rem 0.4rem;
 			grid-auto-rows: max-content;
 			flex-basis: 14.285%; // 100% /7 days
+
+			&.open {
+				display: grid;
+			}
 
 			& span.task {
 				grid-column: 2;
@@ -84,9 +100,69 @@
 			&.today {
 				outline: 2px dotted var(--teal300);
 			}
+
+			&.mask {
+				background: repeating-linear-gradient(
+						45deg,
+						var(--grey100) 1px,
+						var(--grey100) 2px,
+						transparent 2px,
+						transparent 20px
+					),
+					repeating-linear-gradient(
+						135deg,
+						var(--grey100) 1px,
+						var(--grey100) 2px,
+						transparent 2px,
+						transparent 20px
+					);
+				opacity: 0.5;
+			}
 		}
 		li:not(:empty) {
 			border: 1px solid var(--transp-black-3);
+		}
+	}
+
+	// Next/previous week buttons
+	.week {
+		position: absolute;
+		background: var(--primary);
+		color: var(--secondary);
+		writing-mode: vertical-rl;
+		transform: rotate(180deg);
+		height: 100%;
+		left: -3.2rem;
+		border-bottom-left-radius: 0.8rem;
+		border-top-left-radius: 0.8rem;
+		cursor: pointer;
+
+		&.next {
+			transform: rotate(360deg);
+			right: -3.2rem;
+			left: unset;
+		}
+	}
+
+	@media (min-width: $medium) {
+		& ul {
+			grid-template-columns: repeat(7, 1fr);
+		}
+
+		& .dates {
+			grid-template-rows: unset;
+			li {
+				display: grid;
+			}
+		}
+
+		.box-content {
+			grid-template-rows: max-content auto;
+			grid-template-columns: unset;
+		}
+
+		.week {
+			display: none;
 		}
 	}
 }
