--- a/css/main__1661863577507__.css
+++ b/css/main__1661863577507__.css
@@ -154,6 +154,18 @@ a.back-btn {
   width: max-content;
 }
 
+a.link {
+  display: flex;
+  -moz-column-gap: 0.4rem;
+       column-gap: 0.4rem;
+  align-items: center;
+  color: var(--teal500);
+  font-weight: 600;
+}
+a.link .icon {
+  background-color: var(--teal500);
+}
+
 form.todays-tasks {
   display: grid;
   row-gap: 0.8rem;
@@ -980,6 +992,10 @@ tile-context-menu input {
   -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 352 512'%3E%3C!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) --%3E%3Cpath d='M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z'/%3E%3C/svg%3E");
           mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 352 512'%3E%3C!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) --%3E%3Cpath d='M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z'/%3E%3C/svg%3E");
 }
+.icon.table {
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) --%3E%3Cpath d='M464 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 416H64v-96h160v96zm0-160H64v-96h160v96zm224 160H288v-96h160v96zm0-160H288v-96h160v96z'/%3E%3C/svg%3E");
+          mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) --%3E%3Cpath d='M464 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 416H64v-96h160v96zm0-160H64v-96h160v96zm224 160H288v-96h160v96zm0-160H288v-96h160v96z'/%3E%3C/svg%3E");
+}
 
 rich-text-editor {
   display: grid;
@@ -1068,7 +1084,6 @@ create-link-popup .link-popup__wrapper button.icon-only {
   display: grid;
   grid-template-rows: -webkit-max-content -webkit-max-content;
   grid-template-rows: max-content max-content;
-  padding-inline: 3.2rem;
   text-align: center;
 }
 .content.calendar-view .page__wrapper {
@@ -1090,7 +1105,6 @@ create-link-popup .link-popup__wrapper button.icon-only {
   background: var(--teal500);
   padding: 1.6rem;
   color: var(--white);
-  border-radius: 0.4rem;
 }
 .calendar .header a {
   display: flex;
@@ -1108,6 +1122,9 @@ create-link-popup .link-popup__wrapper button.icon-only {
   grid-template-columns: -webkit-max-content auto;
   grid-template-columns: max-content auto;
   row-gap: 0.8rem;
+  padding-inline: 4rem;
+  -moz-column-gap: 1.6rem;
+       column-gap: 1.6rem;
 }
 .calendar ul {
   display: grid;
@@ -1169,20 +1186,25 @@ create-link-popup .link-popup__wrapper button.icon-only {
 }
 .calendar .week {
   position: absolute;
-  background: var(--primary);
-  color: var(--secondary);
+  background: var(--transp-black-3);
+  color: var(--primary);
   -ms-writing-mode: tb-rl;
-      writing-mode: vertical-rl;
+  writing-mode: vertical-rl;
   transform: rotate(180deg);
   height: 100%;
-  left: -3.2rem;
+  left: 0;
   border-bottom-left-radius: 0.8rem;
   border-top-left-radius: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 0.4rem;
+  font-weight: 600;
+  padding: 0 0.4rem;
+  box-shadow: 0 0 16px -6px var(--primary), 0 0 8px -4px var(--teal500);
   cursor: pointer;
 }
 .calendar .week.next {
   transform: rotate(360deg);
-  right: -3.2rem;
+  right: 0;
   left: unset;
 }
 @media (min-width: 1024px) {
